[NAS EPS] Fix TFT decoding in case of "delete packet filters from existing TFT" operation
This issue was migrated from bug 5347 in our old bug tracker.
Original bug information:
Reporter: Pascal Quantin
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: Other
Version: 1.5.x (Experimental)
Attachments:
delete_tft.patch: patch to fix decoding of "delete packet filters from existing TFT" operation