From Pascal Quantin: [NAS EPS] Fix TFT decoding in case of "delete packet filters from existing TFT" operation

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=5347

svn path=/trunk/; revision=34666